[package]
name = "d9_contracts"
version = "0.1.0"
authors = ["D9Devs"]
edition = "2021"

[dependencies]
ink_primitives = { version = "4.0.0-beta", default-features = false }
ink_metadata = { version = "4.0.0-beta", default-features = false }
ink_env = { version = "4.0.0-beta", default-features = false }
ink_storage = { version = "4.0.0-beta", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
   "derive",
], optional = true }

[lib]
name = "d9_contracts"
path = "lib.rs"
crate-type = [
   # Used for normal contract Wasm blobs.
   "cdylib",
   "rlib",
]

[features]
default = ["std"]
std = [
   "ink_metadata/std",
   "ink_env/std",
   "ink_storage/std",
   "ink_primitives/std",
   "scale/std",
   "scale-info/std",
]
ink-as-dependency = []
