[package]
name = "d9-staking"
version = "4.0.0-dev"
authors = ["D9 Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = ""
repository = ""
description = "D9 staking pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"]}
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-io = { version = "23.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", features = ["serde"] }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", features = ["serde"] }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = ["historical"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-application-crypto = { version = "23.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", features = ["serde"] }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
log = { version = "0.4.17", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "https://github.com/paritytech/substrate.git", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-tracing = { version = "10.0.0", path = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "21.0.0", path = "https://github.com/paritytech/substrate.git" }
sp-npos-elections = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
pallet-staking-reward-curve = { version = "4.0.0-dev", path = "../staking/reward-curve" }
pallet-bags-list = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
substrate-test-utils = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
frame-benchmarking = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
frame-election-provider-support = { version = "4.0.0-dev", path = "https://github.com/paritytech/substrate.git" }
rand_chacha = { version = "0.2" }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
	"sp-staking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-election-provider-support/try-runtime"]
